[Vishwas]added:Jason Web Token Added To The Project

--- a/FondoNote/FundoNote/appsettings.json
+++ b/FondoNote/FundoNote/appsettings.json
@@ -9,5 +9,8 @@
   "ConnectionString": {
     "FundoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundoDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "JWT": {
+    "key": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f"
+  }
 }
