[Vishwas]added: Note UploadImage API Added

--- a/FondoNote/FundoNote/appsettings.json
+++ b/FondoNote/FundoNote/appsettings.json
@@ -9,6 +9,12 @@
   "ConnectionString": {
     "FundoDB": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=FundoDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   },
+  "CloudinarySettings": {
+    "cloud_name": "vishwassingh",
+    "api_key": "683289466294493",
+    "api_secret": "4ZOBIUeCPbVeYxY3DHZixL2FrUQ"
+  },
+
   "AllowedHosts": "*",
   "JWT": {
     "key": "PDv7DrqznYL6nv7DrqzjnQYO9JxIsWdcjnQYL6nu0f"
